k8s-envoy/hotel/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
        - name: hotel-server
          image: marselester/travel-hotel:v1.0.0
          ports:
            - containerPort: 8000
