k8s-envoy/hotel/service-envoy.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel
spec:
  selector:
    app: hotel
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 10000
